--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,10 @@
-stages :
-- build
-- test
+stages:
+  - build
+  - test
+  - lint
+  - docker
+  - deploy
+  - notify
 
 build:
   stage: build
@@ -16,7 +20,7 @@ test:
     - echo "Running tests ... "
     - pip install pytest
     - pytest
-    
+
 lint :
   stage: lint
   image: python:3.9-slim
@@ -24,6 +28,17 @@ lint :
     - echo "Linting the code ... "
     - pip install black
     - black -- check .
+
+docker-build:
+  stage: docker
+  image: docker:24
+  services:
+    - docker:dind
+  variables:
+    DOCKER_TLS_CERTDIR: ""
+  script:
+    - echo "Building Docker image..."
+    - docker build -t flask-app .
 
 deploy:
   stage: deploy
