--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,11 +14,12 @@ build:
     - pip install -r requirements.txt
 
 test:
+  image: python:3.9
   stage: test
-  image: python:3.9-slim
+  before_script:
+    - pip install --upgrade pip
+    - pip install -r requirements.txt
   script:
-    - echo "Running tests ... "
-    - pip install pytest
     - pytest
 
 lint :
