--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,11 +16,13 @@ build:
 test:
   image: python:3.9
   stage: test
+  variables:
+    PYTHONPATH: "$CI_PROJECT_DIR"
   before_script:
     - pip install --upgrade pip
     - pip install -r requirements.txt
   script:
-    - pytest
+    - python -m pytest
 
 lint :
   stage: lint
